<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">storiTIME</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="clicktosignup">Create Account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="email">E-mail</string>

</resources>
